--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,59 @@ SecretKey.csv
 .env
 .env.*
 !.env.example
+
+# 项目文档目录（内部文档，不提交到公开仓库）
+docs/
+# 依赖
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# 环境变量
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# 构建输出
+dist/
+build/
+
+# 日志
+logs
+*.log
+
+# 运行时数据
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# 覆盖率目录
+coverage/
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# 操作系统
+.DS_Store
+Thumbs.db
+
+# 临时文件
+*.tmp
+*.temp
+
+# 腾讯云相关
+.tcb_custom_login
+
+# 敏感配置文件
+SecretKey.csv
+*.csv
+.env
+.env.*
+!.env.example
